--- a/LeComCre.Web/LeComCre.Web/Web.config
+++ b/LeComCre.Web/LeComCre.Web/Web.config
@@ -28,6 +28,7 @@
 	</appSettings>
 	<connectionStrings/>
 	<system.web>
+    <httpRuntime executionTimeout="320" maxRequestLength="32768" />
     <customErrors mode="Off"/>
     <globalization culture="pt-BR"/>
 		<trace enabled="true" pageOutput="false" traceMode="SortByTime" localOnly="false"/>
@@ -41,7 +42,7 @@
 		</compilation>
 		<authentication mode="Forms"/>
 		<pages>
-			<controls>
+			<controls >
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			</controls>
