--- a/LeComCre.Web/LeComCre.Web/Web.config
+++ b/LeComCre.Web/LeComCre.Web/Web.config
@@ -24,6 +24,7 @@
     <add key="smtpUser" value="lecomcre@afonsoft.com" />
     <add key="smtpPass" value="123123" />
     <add key="DisplayName" value="Lé Com Cré - Email de Suporte"/>
+    <add key="EnableSsl" value="false"/>
     <!-- Fim do E-Mail -->
 	</appSettings>
 	<connectionStrings/>
