--- a/LeComCre.Web/LeComCre.Web/Web.config
+++ b/LeComCre.Web/LeComCre.Web/Web.config
@@ -21,6 +21,7 @@
 		<!-- Fim Conexãoo -->
     <!-- Configuração do E-Mail -->
     <add key="smtpServer" value="mail.afonsoft.com" />
+    <add key="SmtpPort" value="25"/>
     <add key="smtpUser" value="lecomcre@afonsoft.com" />
     <add key="smtpPass" value="123123" />
     <add key="DisplayName" value="Lé Com Cré - Email de Suporte"/>
