--- a/LeComCre.Web/LeComCre.Web/Web.config
+++ b/LeComCre.Web/LeComCre.Web/Web.config
@@ -16,13 +16,13 @@
 	<appSettings>
 		<clear/>
 		<!-- Configuração do Provider e da String-->
-		<add key="Conexao" value="Server=www.afonsoft.com;Database=LeComCre_db;Uid=lecomcre;Pwd=tcm2010;default command timeout=300;Allow Zero Datetime=True;"/>
+		<add key="Conexao" value="Server=www.afonsoft.com.br;Database=LeComCre_db;Uid=lecomcre;Pwd=tcm2010;default command timeout=300;Allow Zero Datetime=True;"/>
 		<add key="Provider" value="MySQL"/>
 		<!-- Fim Conexãoo -->
     <!-- Configuração do E-Mail -->
-    <add key="smtpServer" value="mail.afonsoft.com" />
+    <add key="smtpServer" value="mail.afonsoft.com.br" />
     <add key="SmtpPort" value="25"/>
-    <add key="smtpUser" value="lecomcre@afonsoft.com" />
+    <add key="smtpUser" value="lecomcre@afonsoft.com.br" />
     <add key="smtpPass" value="123123" />
     <add key="DisplayName" value="Lé Com Cré - Email de Suporte"/>
     <add key="EnableSsl" value="false"/>
